force-app/main/default/objects/SR_Service__c/SR_Service__c.object-meta.xml
<CustomObject>
    <description>This table maintains the sub case Key subscription information for service.</description>
    <label>SR Service</label>
    <nameField>
        <displayFormat>SVR-{000000}</displayFormat>
        <label>Service ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>