force-app/main/default/objects/SR_Service__c/fields/Pending_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Pending_Subscription__c</fullName>
    <label>Pending Subscription</label>
    <length>200</length>
    <type>Text</type>
</CustomField>