force-app/main/default/objects/SR_Service__c/fields/SLA__c.field-meta.xml
<CustomField>
    <fullName>SLA__c</fullName>
    <label>SLA</label>
    <length>200</length>
    <type>Text</type>
</CustomField>