force-app/main/default/objects/SR_Service__c/fields/Subscribed_Service_Network__c.field-meta.xml
<CustomField>
    <fullName>Subscribed_Service_Network__c</fullName>
    <label>Subscribed Service Network</label>
    <length>200</length>
    <type>Text</type>
</CustomField>